Changelog
=========

2.0 (unreleased)
------------------

- Rebuild logic behind manage_categories view:
  Don't search for categories to list downwards from shop root, but instead upwards
  from current context. This will only return contiguous shop category structures,
  and should therefore work nicely for setups with decentralized shop structures.
  [lgraf] 


1.3.1 (2014-02-19)
------------------

- JS: Use POST method and explicitely disable caching for addtocart_ajax requests.
  [lgraf]

- Javascript: replace jq with jQuery / $ for Plone 4.3 compatibility.
  [jone]

- Make phone number in customer confirmation mail configurable and optional.
  [jone]

- Automatically set the shop root on the portal upon new installation. #15
  [jone]

- Update German translations.
  [jone]

- Make ShopCategory LinguaPlone aware.
  [buchi]

- Make sure currency is included everywhere where a price is displayed.
  [lgraf]

1.3 (2013-09-05)
----------------

- Added image field to default ShopItem content type.
  [lgraf]

- Fixed content-type header of ajax response when adding an item to the cart.
  [buchi]


1.2.1 (2013-05-30)
------------------

- Remove unused permission "ftw.shop: Add Order".
  [jone]


1.2 (2013-05-28)
----------------

- Fixed evaluation of shopping cart portlet available() condition.
  [lgraf]

- Fixed attribute selector syntax in shop.js.
  [lgraf]

- Check enabled payment processors for availability before offering them.
  [lgraf]

- Moved shopping cart functionality into its own adapter (IShoppingCart).
  [lgraf]

- Dropped 'newsletter' field from checkout form.
  [lgraf]

- Lawgiver support: map permissions.
  [jone]

- Suppliers: fix address content types / formatting.
  [jone]

- Shop item: use text/x-html-safe output format and only allow text/html input.
  [jone]

- Plone 4.3 compatibility: fix imports.
  [jone]

- Use DEFAULT_VAT_RATES in IShopConfiguration's vat_rates.
  [mathias.leimgruber]
