@@ -4,6 +4,11 @@ Changelog
 2.0 (unreleased)
 ------------------
 
+- Eliminate all uses of the IShopRoot interface.
+  Instead we use the navigation root to register views that are supposed to be shop-global.
+  This will make ftw.shop work with subsites that are supposed to have "their own shop".
+  [lgraf]
+
 - Rebuild logic behind manage_categories view:
   Don't search for categories to list downwards from shop root, but instead upwards
   from current context. This will only return contiguous shop category structures,
